Gettextize the source tree.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,8 @@
-SUBDIRS = . tests
+SUBDIRS = po . tests
 lib_LTLIBRARIES = %D%/librtmidi.la
 %C%_librtmidi_la_LDFLAGS = -no-undefined
 %C%_librtmidi_la_SOURCES = \
   %D%/RtMidi.cpp \
   %D%/RtMidi.h
+
+EXTRA_DIST = config/config.rpath m4/ChangeLog
