Change bug report address and package name to avoid confusion.
We must be aware that it may take some time until the changes here
can be merged upstream. In the meantime developers and users should
be informed to blame the right person for bugs.

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,6 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(RtMidi, 2.1.0, gary@music.mcgill.ca, rtmidi)
+#AC_INIT(RtMidi, 2.1.0, gary@music.mcgill.ca, rtmidi)
+AC_INIT(RtMidi-ts, 3.0, keinstein_junoir@gmx.net, rtmidi-ts)
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_SRCDIR(RtMidi.cpp)
 AC_CONFIG_FILES([rtmidi-config librtmidi.pc Makefile tests/Makefile po/Makefile.in])
