allow to include configure.library as well as Makefile.am into other projects

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,15 @@
-SUBDIRS = po . tests
-lib_LTLIBRARIES = %D%/librtmidi.la
-%C%_librtmidi_la_LDFLAGS = -no-undefined
-%C%_librtmidi_la_SOURCES = \
+SUBDIRS += %D%/po
+RTMIDITESTCXXFLAGS += -I$(top_srcdir)/%D%
+RTMIDITESTLDFLAGS += -L%D% -lrtmidi-ts
+lib_LTLIBRARIES += %D%/librtmidi-ts.la
+%C%_librtmidi_ts_la_LDFLAGS = -no-undefined $(RTMIDI__TS_LIBS)
+%C%_librtmidi_ts_la_CXXFLAGS = $(CXXFLAGS) $(CPPFLAGS) $(RTMIDI_TS_API)
+%C%_librtmidi_ts_la_SOURCES = \
   %D%/RtMidi.cpp \
   %D%/RtMidi.h
 
-EXTRA_DIST = config/config.rpath m4/ChangeLog
+EXTRA_DIST += config/config.rpath m4/ChangeLog
+
+include %D%/tests/Makefile.am
+
+
