--- a/configure.ac
+++ b/configure.ac
@@ -6,257 +6,9 @@ AC_CONFIG_SRCDIR(RtMidi.cpp)
 AC_CONFIG_FILES([rtmidi-config librtmidi.pc Makefile tests/Makefile po/Makefile.in])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
 
-# Fill GXX with something before test.
-AC_SUBST( GXX, ["no"] )
-AC_SUBST(noinst_LIBRARIES)
-
-# Checks for programs.
-AC_PROG_CXX(g++ CC c++ cxx)
-AM_PROG_AR
-AC_PATH_PROG(AR, ar, no)
-if [[ $AR = "no" ]] ; then
-    AC_MSG_ERROR("Could not find ar - needed to create a library");
-fi
-
-LT_INIT([win32-dll])
 AC_CONFIG_MACRO_DIR([m4])
 
-# Checks for header files.
-AC_HEADER_STDC
-#AC_CHECK_HEADERS(sys/ioctl.h unistd.h)
-
-# Check for debug
-AC_MSG_CHECKING(whether to compile debug version)
-AC_ARG_ENABLE(debug,
-  [  --enable-debug = enable various debug output],
-  [AC_SUBST( cppflag, [-D__RTMIDI_DEBUG__] ) AC_SUBST( cxxflag, [-g] ) AC_SUBST( object_path, [Debug] ) AC_MSG_RESULT(yes)],
-  [AC_SUBST( cppflag, [] ) AC_SUBST( cxxflag, [-O3] ) AC_SUBST( object_path, [Release] ) AC_MSG_RESULT(no)])
-
-# Set paths if prefix is defined
-if test "x$prefix" != "x" && test "x$prefix" != "xNONE"; then
-  LIBS="$LIBS -L$prefix/lib"
-  CPPFLAGS="$CPPFLAGS -I$prefix/include"
-fi
-
-# For -I and -D flags
-CPPFLAGS="$CPPFLAGS $cppflag"
-
-# For debugging and optimization ... overwrite default because it has both -g and -O2
-#CXXFLAGS="$CXXFLAGS $cxxflag"
-CXXFLAGS="$cxxflag"
-
-# Check compiler and use -Wall if gnu.
-if [test $GXX = "yes" ;] then
-  AC_SUBST( cxxflag, ["-Wall -Wextra"] )
-fi
-
-CXXFLAGS="$CXXFLAGS $cxxflag"
-
-AC_ARG_ENABLE(address-sanitizer,
-	AS_HELP_STRING([--enable-address-sanitizer],[Enable gcc/clang address santizer]),
-	[AS_IF(test "$enableval" = yes,
-
-	       AC_LANG_PUSH(C++)
-	       for flag in  -fsanitize=address  -fno-omit-frame-pointer  -fno-common
-	       do
-		       tmpcxxflags="$CXXFLAGS"
-		       CXXFLAGS="$CXXFLAGS $flag"
-		       AC_MSG_CHECKING([whether $CXX supports $flag])
-		       AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[]],[[]])],
-		                         [AC_MSG_RESULT([yes])],
-					 [CXXFLAGS="$tmpcxxflags"
-			         AC_MSG_RESULT([no])])
-			AC_LANG_PUSH(C)
-			tmpcflags="$CFLAGS"
-			CFLAGS="$CFLAGS $flag"
-			AC_MSG_CHECKING([whether $CC supports $flag])
-			AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[]],[[]])],
-		                          [AC_MSG_RESULT([yes])],
-					  [CFLAGS="$tmpcflags"
-			          AC_MSG_RESULT([no])])
-			AC_LANG_POP(C)
-	       done
-	       AC_LANG_POP(C++)
-	       )
-	]
-)
-
-AC_ARG_ENABLE(thread-sanitizer,
-	AS_HELP_STRING([--enable-thread-sanitizer],[Enable gcc/clang thread santizer]),
-	[AS_IF(test "$enableval" = yes,
-	       AC_LANG_PUSH(C++)
-	       for flag in  -fsanitize=thread  -fno-omit-frame-pointer  -fno-common -fPIC
-	       do
-		       tmpcxxflags="$CXXFLAGS"
-		       CXXFLAGS="$CXXFLAGS $flag"
-		       AC_MSG_CHECKING([whether $CXX supports $flag])
-		       AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[]],[[]])],
-		                         [AC_MSG_RESULT([yes])],
-					 [CXXFLAGS="$tmpcxxflags"
-			         AC_MSG_RESULT([no])])
-		       AC_LANG_PUSH(C)
-		       tmpcflags="$CFLAGS"
-		       CFLAGS="$CFLAGS $flag"
-		       AC_MSG_CHECKING([whether $CC supports $flag])
-		       AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[]],[[]])],
-		                         [AC_MSG_RESULT([yes])],
-					 [CFLAGS="$tmpcflags"
-			         AC_MSG_RESULT([no])])
-		       AC_LANG_POP(C)
-	       done
-	       for flag in  -pie
-	       do
-		       tmpldflags="$LDFLAGS"
-		       LDFLAGS="$LDFLAGS $flag"
-		       AC_MSG_CHECKING([whether $LD supports $flag])
-		       AC_LINK_IFELSE([AC_LANG_PROGRAM([[]],[[]])],
-		                         [AC_MSG_RESULT([yes])],
-					 [LDFLAGS="$tmpldflags"
-			         AC_MSG_RESULT([no])])
-	       done
-	       AC_LANG_POP(C++)
-	       )
-	]
-)
-
-
-# Checks for package options and external software
-AC_CANONICAL_HOST
-
-AC_SUBST( sharedlib, ["librtmidi.so"] )
-AC_SUBST( sharedname, ["librtmidi.so.\$(RELEASE)"] )
-AC_SUBST( libflags, ["-shared -Wl,-soname,\$(SHARED).\$(MAJOR) -o \$(SHARED).\$(RELEASE)"] )
-case $host in
-  *-apple*)
-  AC_SUBST( sharedlib, ["librtmidi.dylib"] )
-  AC_SUBST( sharedname, ["librtmidi.\$(RELEASE).dylib"] )
-  AC_SUBST( libflags, ["-dynamiclib -o librtmidi.\$(RELEASE).dylib"] )
-esac
-
-AC_SUBST( api, [""] )
-AC_SUBST( req, [""] )
-AC_MSG_CHECKING(for MIDI API)
-have_virtual_devices=no
-case $host in
-  *-*-linux*)
-  AC_ARG_WITH(jack, [  --with-jack = choose JACK server support (mac and linux only)], [
-  have_virtual_devices=yes
-  api="$api -D__UNIX_JACK__"
-  AC_MSG_RESULT(using JACK)
-  AC_CHECK_LIB(jack, jack_client_open, , AC_MSG_ERROR(JACK support requires the jack library!))], )
-  AC_LANG_PUSH(C++)
-  AC_TRY_COMPILE([
-#include <jack/jack.h>
-	 ],[
-return jack_port_uuid(NULL);
-       ],api="$api -D__UNIX_JACK_HAS_UUID__")
-  AC_LANG_POP(C++)
-
-  # Look for ALSA flag
-  AC_ARG_WITH(alsa, [  --with-alsa = choose native ALSA sequencer API support (linux only)], [
-    have_virtual_devices=yes
-    api="$api -D__LINUX_ALSA__"
-    req="$req alsa"
-    AC_MSG_RESULT(using ALSA)
-    AC_CHECK_LIB(asound, snd_seq_open, , AC_MSG_ERROR(ALSA support requires the asound library!))], )
-
-  if [test "$api" == "";] then
-    AC_MSG_RESULT(using ALSA)
-    AC_SUBST( api, [-D__LINUX_ALSA__] )
-    req="$req alsa"
-    have_virtual_devices=yes
-    AC_CHECK_LIB(asound, snd_seq_open, , AC_MSG_ERROR(ALSA sequencer support requires the asound library!))
-  fi
-
-  # Checks for pthread library.
-  AC_CHECK_LIB(pthread, pthread_create, , AC_MSG_ERROR(RtMidi requires the pthread library!))
-  ;;
-
-  *-apple*)
-  AC_ARG_WITH(jack, [  --with-jack = choose JACK server support (mac and linux only)], [
-  have_virtual_devices=yes
-  api="$api -D__UNIX_JACK__"
-  AC_MSG_RESULT(using JACK)
-  AC_CHECK_LIB(jack, jack_client_open, , AC_MSG_ERROR(JACK support requires the jack library!))], )
-  AC_LANG_PUSH(C++)
-  AC_TRY_COMPILE([
-#include <jack/jack.h>
-	 ],[
-return jack_port_uuid(NULL);
-       ],api="$api -D__UNIX_JACK_HAS_UUID__")
-  AC_LANG_POP(C++)
-
-  # Look for Core flag
-  AC_ARG_WITH(core, [  --with-core = choose CoreMidi API support (mac only)], [
-    have_virtual_devices=yes
-    api="$api -D__MACOSX_CORE__"
-    AC_MSG_RESULT(using CoreMidi)
-    AC_CHECK_HEADER(CoreMIDI/CoreMIDI.h, [], [AC_MSG_ERROR(CoreMIDI header files not found!)] )
-    LIBS="$LIBS -framework CoreMIDI -framework CoreFoundation -framework CoreAudio" ], )
-
-  # If no api flags specified, use CoreMidi
-  if [test "$api" == ""; ] then
-    have_virtual_devices=yes
-    AC_SUBST( api, [-D__MACOSX_CORE__] )
-    AC_MSG_RESULT(using CoreMidi)
-    AC_CHECK_HEADER(CoreMIDI/CoreMIDI.h,
-      [],
-      [AC_MSG_ERROR(CoreMIDI header files not found!)] )
-    AC_SUBST( LIBS, ["-framework CoreMIDI -framework CoreFoundation -framework CoreAudio"] )
-  fi
-  ;;
-
-  *-mingw32*)
-  # Look for WinMM flag
-  AC_ARG_WITH(winmm, [  --with-winmm = choose Windows MultiMedia (MM) API support (windoze only)], [
-    api="$api -D__WINDOWS_MM__"
-    AC_MSG_RESULT(using WinMM)
-    AC_SUBST( LIBS, [-lwinmm] )], )
-
-  AC_ARG_WITH(winks, [  --with-winks = choose kernel streaming support (windoze only)], [
-    api="$api -D__WINDOWS_KS__"
-    AC_SUBST( LIBS, ["-lsetupapi -lksuser"] )
-    AC_MSG_RESULT(using kernel streaming) ], )
-
-  # I can't get the following check to work so just manually add the library
-	# or could try the following?  AC_LIB_WINMM([midiOutGetNumDevs])
-  # AC_CHECK_LIB(winmm, midiInGetNumDevs, , AC_MSG_ERROR(Windows MIDI support requires the winmm library!) )],)
-
-  # If no api flags specified, use WinMM
-  if [test "$api" == "";] then
-    AC_SUBST( api, [-D__WINDOWS_MM__] )
-    AC_MSG_RESULT(using WinMM)
-    AC_SUBST( LIBS, [-lwinmm] )
-  fi
-
-  AC_CACHE_CHECK([where to find support dlls], [ac_cv_mingw_dll_dirs],
-  [
-       gccsearchdirs=`$CXX $CXXFLAGS -print-search-dirs|\
-			sed -e '/^libraries:/ { s/^libraries: *=\?//;s/:/ /g; p } ; d'`
-       SEARCHDIRS=""
-       for d in $gccsearchdirs /usr/share/doc/mingw32-runtime /mingw/lib /mingw/bin  /usr/lib /lib /usr/bin /bin
-       do
-	  AS_IF(test -d $d,
-	  [ SEARCHDIRS="$SEARCHDIRS $d" ])
-       done
-       ac_cv_mingw_dll_dirs="$SEARCHDIRS"
-  ])
-
-  AC_SUBST(DLLSEARCHPATH,"$ac_cv_mingw_dll_dirs")
-
-  ;;
-
-  *)
-  # Default case for unknown realtime systems.
-  AC_MSG_ERROR(Unknown system type for MIDI support!)
-  ;;
-esac
-AM_CONDITIONAL(COPYDLLS,test -n "$DLLSEARCHPATH")
-AM_CONDITIONAL(HAVE_VIRTUAL_DEVICES,test "$have_virtual_devices" == yes)
-AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION([0.18])
-
-CPPFLAGS="$CPPFLAGS $api"
+m4_include(configure.library)
 
 AC_OUTPUT
 
