--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 # Process this file with autoconf to produce a configure script.
 #AC_INIT(RtMidi, 2.1.0, gary@music.mcgill.ca, rtmidi)
-AC_INIT(RtMidi-ts, 3.0, keinstein_junoir@gmx.net, rtmidi-ts)
+AC_INIT(RtMidi-ts, 3.0, keinstein_junior@gmx.net, rtmidi-ts)
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_SRCDIR(RtMidi.cpp)
 AC_CONFIG_FILES([rtmidi-config librtmidi.pc Makefile tests/Makefile po/Makefile.in])
@@ -8,7 +8,11 @@ AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
 
 AC_CONFIG_MACRO_DIR([m4])
 
+rtmidi_suffix="-ts"
 m4_include(configure.library)
+
+SUBDIRS="$SUBDIRS %D%/po"
+
 
 AC_OUTPUT
 
