Distribute config.rpath and sources for some configuration files (fixes Mutabor distcheck).

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 RTMIDITESTCXXFLAGS = $(EXTRA_RTMIDITESTCXXFLAGS) -I$(top_srcdir)/%D%
 RTMIDILIBRARYNAME = %D%/librtmidi@rtmidi_suffix@.la
 RTMIDITESTLDFLAGS = $(EXTRA_RTMIDITESTLDFLAGS) $(RTMIDILIBRARYNAME)
+RTMIDICONFIGRPATH = config/config.rpath
 lib_LTLIBRARIES += %D%/librtmidi@rtmidi_suffix@.la
 %C%_librtmidi@rtmidi_suffix@_la_LDFLAGS = -no-undefined $(RTMIDI__TS_LIBS)
 %C%_librtmidi@rtmidi_suffix@_la_CXXFLAGS = $(CXXFLAGS) $(CPPFLAGS) $(RTMIDI_TS_API) -DRTMIDI_NO_WARN_DEPRECATED
@@ -8,6 +9,10 @@ lib_LTLIBRARIES += %D%/librtmidi@rtmidi_suffix@.la
   %D%/RtMidi.cpp \
   %D%/RtMidi.h
 
-EXTRA_DIST += config/config.rpath m4/ChangeLog
+EXTRA_DIST += \
+	$(RTMIDICONFIGRPATH) \
+	%D%/m4/ChangeLog \
+	%D%/rtmidi-config.in \
+	%D%/librtmidi.pc.in
 
 include %D%/tests/Makefile.am
