add po to SUBDIRS
Signed-off-by: Tobias Schlemmer <keinstein@users.sourceforge.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,4 @@
+SUBDIRS = po
 RTMIDITESTCXXFLAGS = $(EXTRA_RTMIDITESTCXXFLAGS) -I$(top_srcdir)/%D%
 RTMIDILIBRARYNAME = %D%/librtmidi@rtmidi_suffix@.la
 RTMIDITESTLDFLAGS = $(EXTRA_RTMIDITESTLDFLAGS) $(RTMIDILIBRARYNAME)
