Another fix for the po not in SUBDIRS problem.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,7 @@
+if RTMIDI_STANDALONE
+ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = po
+endif
 RTMIDITESTCXXFLAGS = $(EXTRA_RTMIDITESTCXXFLAGS) -I$(top_srcdir)/%D%
 RTMIDILIBRARYNAME = %D%/librtmidi@rtmidi_suffix@.la
 RTMIDITESTLDFLAGS = $(EXTRA_RTMIDITESTLDFLAGS) $(RTMIDILIBRARYNAME)
