generate config/config.rpath by script

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,10 @@ before_install:
     - if test "$TRAVIS_OS_NAME" = osx ; then rm -rf /usr/local/include/c++ ; fi # fix broken gcc installation
     - if test "$TRAVIS_OS_NAME" = osx ; then brew install $EXTRA_BREW  gettext flex bison libtool autoconf jack  ; fi
     - if test "$TRAVIS_OS_NAME" = osx ; then brew link --force $EXTRA_BREW gettext flex bison libtool autoconf jack ; fi
+    - mkdir -p config
+    - touch config/config.rpath
 
 script:
-  autoreconf -i -f && ./configure && make -j4 && $TEST_RUNNER make check
+    - mkdir -p config
+    - touch config/config.rpath
+    - autoreconf -i -f && ./configure && make -j4 && $TEST_RUNNER make check
