Add missing m4 files

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 if RTMIDI_STANDALONE
-ACLOCAL_AMFLAGS = -I m4
+ACLOCAL_AMFLAGS = -I m4 --install
 SUBDIRS = po
 endif
 RTMIDITESTCXXFLAGS = $(EXTRA_RTMIDITESTCXXFLAGS) -I$(top_srcdir)/%D%
