--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,8 @@
-if RTMIDI_STANDALONE
 ACLOCAL_AMFLAGS = -I m4 --install
 SUBDIRS = po
-endif
 RTMIDICONFIGRPATH = config/config.rpath
 DLLPROGRAMS = $(check_PROGRAMS)
 check_PROGRAMS =
+TESTS =
 
 include %D%/Makefile.library
