--- a/.travis.yml
+++ b/.travis.yml
@@ -46,3 +46,4 @@ script:
     - mkdir -p config
     - touch config/config.rpath
     - autoreconf -i -f && ./configure && make -j4 && $TEST_RUNNER make check || (cat test-suite.log ; false)
+    - cat tests/errors.log
