--- a/.travis.yml
+++ b/.travis.yml
@@ -46,4 +46,5 @@ script:
     - mkdir -p config
     - touch config/config.rpath
     - autoreconf -i -f && ./configure && make -j4 && $TEST_RUNNER make check || (cat test-suite.log ; false)
+    - make distcheck
     - cat tests/errors.log
