--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,28 @@
 git:
-  depth: 3
+  depth: 1
 sudo: false
 language: c++
 group: travis_latest
+os
+  - osx
+  - linux
+  - windows
 compiler:
   - gcc
   - clang
-matrix:
-  include:
-    - os: osx
-      osx_image: xcode9.2
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++ && EXTRA_BREW= "
-
-    - os: osx
-      osx_image: xcode9.2
-      env:
-        - MATRIX_EVAL="CC=gcc && CXX=g++ && EXTRA_BREW=gcc "
-
+osx_image:
+  - xcode9.2
+# matrix:
+#   include:
+#     - os: osx
+#       env:
+#         - MATRIX_EVAL="CC=clang && CXX=clang++ && EXTRA_BREW= "
+# 
+#     - os: osx
+#       osx_image: xcode9.2
+#       env:
+#         - MATRIX_EVAL="CC=gcc && CXX=g++ && EXTRA_BREW=gcc "
+# 
 
 addons:
   apt:
