--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,13 @@ language: c++
 group: travis_latest
 os:
   - osx
+    osx_image: xcode9.2
   - linux
 
 compiler:
   - gcc
   - clang
 
-osx_image:
-    - xcode9.2
 
 addons:
   apt:
