--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ environment:
 build_script:
   - dir C:\
   - dir C:\msys64
+  - dir C:\msys64\mingw64
   - dir C:\mingw-w64
   - SET PATH=C:\mingw-w64\bin;C:\msys64\mingw64\bin;%PATH%	
   - echo "%PATH%"
@@ -17,6 +18,7 @@ build_script:
   - bash -c "env"
   - bash -c pwd
   - bash -c ls
+  - dir c:\msys64\mingw64\bin
   - mingw-get install autoconf automake gettext libtool
   - bash -c autoreconf -i -f
   - bash -c "./configure"
