--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ build_script:
   - dir C:\
   - dir C:\msys64
   - dir C:\msys64\mingw64
+  - dir C:\msys64\mingw64\x86_64-w64-mingw32
   - dir C:\mingw-w64
   - SET PATH=C:\mingw-w64\bin;C:\msys64\mingw64\bin;%PATH%	
   - echo "%PATH%"
