install autoconf & Co.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,8 @@ install:
   - C:\msys64\usr\bin\pacman -Ss --noconfirm automake
   - C:\msys64\usr\bin\pacman -Ss --noconfirm libtool
   - C:\msys64\usr\bin\pacman -Ss --noconfirm gettext
-  - C:\msys64\usr\bin\pacman -S --noconfirm --needed mingw-w64-x86_64-boost
+  - C:\msys64\usr\bin\pacman -S --noconfirm --needed
+      mingw-w64-x86_64-boost autoconf mingw-w64-x86_64-libtool automake1.15 mingw-w64-x86_64-gettext
 
 build_script:
   - dir C:\
