add other autotools to appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,7 +51,11 @@ build_script:
   - bash -c "env"
   - bash -c pwd
   - bash -c ls
+  - bash -c autoheader -f
   - bash -c aclocal -I m4 --install
+  - bash -c automake -a -f
+  - bash -c autopoint -f
+  - bash -c libtoolize -i -f
   - bash -c autoconf --add-missing
   - bash -c autoreconf -i -f
   - bash -c "./configure"
