change -a to --add-missing for automake in appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,7 +52,7 @@ build_script:
   - bash -c pwd
   - bash -c ls
   - bash -c aclocal -I m4 --install
-  - bash -c automake -a -f
+  - bash -c automake --add-missing -f
   - bash -c autopoint -f
   - bash -c libtoolize -i -f
   - bash -c autoconf --add-missing
