Add comparison of port descriptors

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -17,14 +17,16 @@ check_PROGRAMS += \
 	%D%/errors \
 	%D%/midiclock_in \
 	%D%/midiclock_out \
-	%D%/lostportdescriptor
+	%D%/lostportdescriptor \
+	%D%/testequalityoperator
 
 TESTS += \
 	%D%/midiprobe \
 	%D%/midiprobe2 \
 	%D%/midiprobe-all \
 	%D%/errors \
-	%D%/lostportdescriptor
+	%D%/lostportdescriptor \
+	%D%/testequalityoperator
 
 CLEANFILES += \
 	%D%/*.class
@@ -58,6 +60,7 @@ endif
 %C%_midiclock_in_SOURCES   = %D%/midiclock.cpp
 %C%_midiclock_out_SOURCES  = %D%/midiclock.cpp
 %C%_lostportdescriptor_SOURCES       = %D%/lostportdescriptor.cpp
+%C%_testequalityoperator_SOURCES       = %D%/testequalityoperator.cpp
 
 # When a nonstandard gettext library or wrapper is used,
 # we need extra flags.
@@ -76,6 +79,7 @@ endif
 %C%_midiclock_in_CXXFLAGS  = $(AM_CXXFLAGS) $(RTMIDITESTCXXFLAGS) -DRTMIDI_NO_WARN_DEPRECATED
 %C%_midiclock_out_CXXFLAGS = $(AM_CXXFLAGS) $(RTMIDITESTCXXFLAGS) -DRTMIDI_NO_WARN_DEPRECATED
 %C%_lostportdescriptor_CXXFLAGS      = $(AM_CXXFLAGS) $(RTMIDITESTCXXFLAGS) -DRTMIDI_NO_WARN_DEPRECATED
+%C%_testequalityoperator_CXXFLAGS      = $(AM_CXXFLAGS) $(RTMIDITESTCXXFLAGS) -DRTMIDI_NO_WARN_DEPRECATED
 
 
 %C%_midiprobe_LDFLAGS      = $(AM_LDFLAGS) $(RTMIDITESTLDFLAGS)
@@ -93,6 +97,7 @@ endif
 %C%_midiclock_in_LDFLAGS   = $(AM_LDFLAGS) $(RTMIDITESTLDFLAGS)
 %C%_midiclock_out_LDFLAGS  = $(AM_LDFLAGS) $(RTMIDITESTLDFLAGS)
 %C%_lostportdescriptor_LDFLAGS       = $(AM_LDFLAGS) $(RTMIDITESTLDFLAGS)
+%C%_testequalityoperator_LDFLAGS       = $(AM_LDFLAGS) $(RTMIDITESTLDFLAGS)
 
 
 %C%_midiprobe_LDADD      = $(RTMIDILIBRARYNAME)
@@ -110,6 +115,7 @@ endif
 %C%_midiclock_in_LDADD   = $(RTMIDILIBRARYNAME)
 %C%_midiclock_out_LDADD  = $(RTMIDILIBRARYNAME)
 %C%_lostportdescriptor_LDADD       = $(RTMIDILIBRARYNAME)
+%C%_testequalityoperator_LDADD       = $(RTMIDILIBRARYNAME)
 
 
 if RTMIDICOPYDLLS
