--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,8 @@
 ACLOCAL_AMFLAGS = -I m4 -I rtmidi-m4 --install
+AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
+AM_CXXFLAGS = $(CODE_COVERAGE_CFLAGS)
+AM_LDFLAGS = $(CODE_COVERAGE_LDFLAGS)
+LIBS = $(CODE_COVERAGE_LIBS)
 SUBDIRS = po
 if MAKE_DOC
 SUBDIRS += doc
@@ -11,3 +15,6 @@ CLEANFILES =
 DISTCLEANFILES =
 
 include %D%/Makefile.library
+
+gcov:
+	$(GCOV) -p -s "$(srcdir)" -o "$$dir" $$(find . -name '*.gc*')
