Check for libgcov before clearing variables.

--- a/configure.ac
+++ b/configure.ac
@@ -36,8 +36,11 @@ m4_include(configure.library)
 
 AC_LANG_PUSH(C++)
 AX_CODE_COVERAGE
-CODE_COVERAGE_LIBS=""
-CODE_COVERAGE_LDFLAGS=""
+AC_CHECK_LIB(gcov,[__gcov_init], [], [
+  AC_MSG_NOTICE([Cannot link gcov library trying without])
+  CODE_COVERAGE_LIBS=""
+  CODE_COVERAGE_LDFLAGS=""
+])
 AC_LANG_POP(C++)
 
 
