--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4 -I rtmidi-m4 --install
 AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
-AM_CXXFLAGS = $(CODE_COVERAGE_CFLAGS)
+AM_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)
 AM_LDFLAGS = $(CODE_COVERAGE_LDFLAGS)
 LIBS = $(CODE_COVERAGE_LIBS)
 SUBDIRS = po
