upgrade code coverage check to current autoconf archive.

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-# Process this file with autoconf to produce a configure script.
+># Process this file with autoconf to produce a configure script.
 #AC_INIT(RtMidi, 2.1.0, gary@music.mcgill.ca, rtmidi)
 
 m4_include(configure.version)
@@ -27,12 +27,12 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 AC_CONFIG_MACRO_DIR([m4])
 
+
 rtmidi_standalone="yes"
 SUBDIRS="$SUBDIRS %D%/po"
 rtmidi_subdir="$srcdir"
 m4_define(rtmididir,[.])
 m4_include(configure.library)
-
 
 AC_LANG_PUSH(C++)
 AX_CODE_COVERAGE
@@ -41,15 +41,32 @@ AC_CHECK_LIB(gcov,[__gcov_init], [], [
   CODE_COVERAGE_LIBS=""
   CODE_COVERAGE_LDFLAGS=""
 ])
+case "$CXX" in
+*clang*)
+	AC_CHECK_LIB(libc_nonshared,[atexit], [
+	  CODE_COVERAGE_LIBS="-llibc_nonshared"
+	], [])
+	  ;;
+esac
+
 if test "x${CODE_COVERAGE_CFLAGS}" = "x"
 then
   :
 else 
   CODE_COVERAGE_CFLAGS="${CODE_COVERAGE_CFLAGS} --coverage"
   CODE_COVERAGE_CXXFLAGS="${CODE_COVERAGE_CXXFLAGS} --coverage"
+  dnl CFLAGS and CXXFLAGS must be set for libtool
+  CFLAGS="${CFLAGS} ${CODE_COVERAGE_CFLAGS}"
+  CPPFLAGS="${CPPFLAGS} ${CODE_COVERAGE_CPPFLAGS}"
+  CXXFLAGS="${CXXFLAGS} ${CODE_COVERAGE_CXXFLAGS}"
+  LDFLAGS="${LDFLAGS} ${CODE_COVERAGE_LDFLAGS}"
+  LIBS="${LIBS} ${CODE_COVERAGE_LIBS}"
 fi
 AC_LANG_POP(C++)
 
 
+lt_CFLAGS="${lt_CFLAGS}  ${CODE_COVERAGE_CFLAGS}"
+echo "LTCFLAGS: $LTCFLAGS"
+echo "lt_CFLAGS: $lt_CFLAGS"
 AC_OUTPUT
 
