Add unused source files to EXTRA_DIST

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,26 +23,42 @@ RTMIDIOSXSOURCES = \
   %D%/OSXCoreMidi.cpp \
   %D%/OSXCoreMidi.h
 
+RTMIDIDUMMYSOURCES = \
+  %D%/Dummy.cpp \
+  %D%/Dummy.h
+
 if HAVE_JACK
 RTMIDISOURCES += $(RTMIDIJACKSOURCES)
+else
+EXTRA_DIST += $(RTMIDIJACKSOURCES)
 endif
 
 if HAVE_ALSA
 RTMIDISOURCES += $(RTMIDIALSASOURCES)
+else
+EXTRA_DIST += $(RTMIDIALSASOURCES)
 endif
 
 if HAVE_WINMM
 RTMIDISOURCES += $(RTMIDIWINMMSOURCES)
+else
+EXTRA_DIST += $(RTMIDIWINMMSOURCES)
 endif
 
 if HAVE_WINKS
 RTMIDISOURCES += $(RTMIDIWINKSSOURCES)
+else
+EXTRA_DIST += $(RTMIDIWINKSSOURCES)
 endif
 
 if HAVE_COREMIDI
 RTMIDISOURCES += $(RTMIDIOSXSOURCES)
+else
+EXTRA_DIST += $(RTMIDIOSXSOURCES)
 endif
 
 if HAVE_DUMMY
 RTMIDISOURCES += $(RTMIDIDUMMYSOURCES)
+else
+EXTRA_DIST += $(RTMIDIDUMMYSOURCES)
 endif
